--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "register-service-worker": "^1.5.2",
+    "twilio-chat": "^3.2.2",
     "vue": "^2.5.22",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.0",
