--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "register-service-worker": "^1.5.2",
     "twilio-chat": "^3.2.2",
     "vue": "^2.5.22",
+    "vue-recaptcha": "^1.1.1",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
